    application. This means ``type(x).name`` is now parsed as ``(type(x)).name``
    and not as ``type((x).name)``. Note that this also affects the AST
    structure; for immediate macro parameters ``nkCall('addr', 'x')`` is
    produced instead of ``nkAddr('x')``.
  - ``concept`` is now a keyword and is used instead of ``generic``.
  - The ``inc``, ``dec``, ``+=``, ``-=`` builtins now produces OverflowError
    exceptions. This means code like the following:

  .. code-block:: nim
    var x = low(T)
    while x <= high(T):
      echo x
      inc x

  Needs to be replaced by something like this:

  .. code-block:: nim
    var x = low(T).int
    while x <= high(T).int:
      echo x.T
      inc x

  - **Negative indexing for slicing is deprecated and will be removed in the
    next version of the language.** Instead of ``a[0.. -1]`` you can
    use ``a[0.. ^1]``. This also works with accessing a single
    element ``a[^1]``. Note that we cannot detect this reliably as it is
    determined at **runtime** whether negative indexing is used!


  Language Additions
  ------------------

  - For empty ``case object`` branches ``discard`` can finally be used instead
    of ``nil``.
  - Automatic dereferencing is now done for the first argument of a routine
    call if overloading resolution produces no match otherwise. This feature
    has to be enabled with the `experimental`_ pragma.
  - Objects that do not use inheritance nor ``case`` can be put into ``const``
    sections. This means that finally this is possible and produces rather
    nice code:

  .. code-block:: nim
    import tables

    const
      foo = {"ah": "finally", "this": "is", "possible.": "nice!"}.toTable()


  - Ordinary parameters can follow after a varargs parameter. This means the
    following is finally accepted by the compiler:

  .. code-block:: nim
    template takesBlock(a, b: int, x: varargs[expr]; blck: stmt) =
      blck
      echo a, b

    takesBlock 1, 2, "some", 0.90, "random stuff":